--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "crack-hash-manager"]
 	path = crack-hash-manager
-	url = ./crack-hash-manager
+	url = https://github.com/fatalistix-nsu/crack-hash-manager
 [submodule "crack-hash-worker"]
 	path = crack-hash-worker
-	url = ./crack-hash-worker
+	url = https://github.com/fatalistix-nsu/crack-hash-worker
